; ModuleID = '/home/carl/AnghaBench/git/extr_refs.c_repo_dwim_ref.c'
source_filename = "/home/carl/AnghaBench/git/extr_refs.c_repo_dwim_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.repository = type { i32 }
%struct.object_id = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @repo_dwim_ref(%struct.repository* %0, i8* %1, i32 %2, %struct.object_id* %3, i8** %4) #0 {
  %6 = alloca %struct.repository*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.object_id*, align 8
  %10 = alloca i8**, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  store %struct.repository* %0, %struct.repository** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store %struct.object_id* %3, %struct.object_id** %9, align 8
  store i8** %4, i8*** %10, align 8
  %13 = load %struct.repository*, %struct.repository** %6, align 8
  %14 = call i8* @substitute_branch_name(%struct.repository* %13, i8** %7, i32* %8)
  store i8* %14, i8** %11, align 8
  %15 = load %struct.repository*, %struct.repository** %6, align 8
  %16 = load i8*, i8** %7, align 8
  %17 = load i32, i32* %8, align 4
  %18 = load %struct.object_id*, %struct.object_id** %9, align 8
  %19 = load i8**, i8*** %10, align 8
  %20 = call i32 @expand_ref(%struct.repository* %15, i8* %16, i32 %17, %struct.object_id* %18, i8** %19)
  store i32 %20, i32* %12, align 4
  %21 = load i8*, i8** %11, align 8
  %22 = call i32 @free(i8* %21)
  %23 = load i32, i32* %12, align 4
  ret i32 %23
}

declare dso_local i8* @substitute_branch_name(%struct.repository*, i8**, i32*) #1

declare dso_local i32 @expand_ref(%struct.repository*, i8*, i32, %struct.object_id*, i8**) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
